OCPBUGS-43745/manifests/service1.yaml
apiVersion: v1
kind: List
items:
- apiVersion: v1
  kind: ReplicationController
  metadata:
    labels:
      name: web-server-rc1
    name: web-server-rc1
  spec:
    replicas: 1
    template:
      metadata:
        labels:
          name: web-server-rc1
      spec:
        containers:
        - image: quay.io/openshifttest/nginx-alpine@sha256:04f316442d48ba60e3ea0b5a67eb89b0b667abf1c198a3d0056ca748736336a0
          name: nginx
- apiVersion: v1
  kind: Service
  metadata:
    labels:
      name: service-unsecure1
    name: service-unsecure1
  spec:
    ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: 8080
    selector:
      name: web-server-rc1
