OCPBUGS-43745/manifests/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    name: service-unsecure1
  name: mytest
spec:
  port:
    targetPort: http
  to:
    kind: Service
    name: service-unsecure1
    weight: 100
  wildcardPolicy: None
